k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hccc
  labels:
    app.kubernetes.io/name: hccc
