k8s/judge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge-server
  namespace: hccc
  labels:
    app.kubernetes.io/name: hccc-judge-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: hccc-judge-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hccc-judge-server
    spec:
      serviceAccountName: hccc-judge
      containers:
        - name: judge-server
          image: ghcr.io/latte72r/hccc-judge:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
